2005-12-06  Ryan Lortie  <desrt@desrt.ca>

	* Locations.xml.in: Add Lugansk (UKCW) and Ternopol (UKLT) from
	  Ukraine.  Closes bug #168527.

2005-12-06  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* Locations.xml.in: Corrected name and coordinates for OIAG
	  (bug #319538, Farzaneh Sarafraz).

2005-12-06  Ryan Lortie  <desrt@desrt.ca>

	* Locations.xml.in: Cleaned up the Dulles/Washington, DC/Virginia mess
	  by setting the Zero Milestone for Washington, updating info between
	  the two copies of Dulles and adding Arlington, VA.  These fixes
	  should close bug #313102 and bug #310739.

2005-10-04  Davyd Madeley  <davyd@madeley.id.au>

	* docs/ChangeLog: removed. Merged into this ChangeLog

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-08-28  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/gweather.xml: fix validation error, oops
	* gweather-about.c: add me to documenters

2005-08-28  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/gweather.xml:
	* figures/gweather-menu-prefs.png:
	* figures/gweather-prefs-general.png:
	* figures/gweather-prefs-locations.png: update documentation for 2.12

2005-08-25  Maxim Dziumanenko <mvd@mylinux.ua>

	* Makefile.am: Add "uk" to DOC_LINGUAS.

2005-08-25  Rodrigo Moya <rodrigo@novell.com>

	* gweather-applet.c (update_finish): use hints for the notification.
	
2005-08-24  Ryan Lortie  <desrt@desrt.ca>

	* weather.c: Conditionalise the #inclusion of <values.h>.  Patch from
	  Diego Pettenò <flameeyes@gentoo.org> closes bug #314366.

2005-08-24  Ryan Lortie  <desrt@desrt.ca>

	* gweather-applet.c (update_finish): Fix serious logic problem in
	  failure-handling code and always reschedule timeout function -- not
	  just in case of success.  Closes bug #309492.

	  This patch largely based on the work of Pierre Ossman.

2005-08-24  Ryan Lortie  <desrt@desrt.ca>

	* Locations.xml.in: Removed broken duplicate Wildwood, New Jersey