@@ -1,5 +1,10 @@
 2005-12-06  Ryan Lortie  <desrt@desrt.ca>
 
+	* weather.c (weather_info_get_update): Use %c universally as the
+	  date format.  Closes bug #172514.
+
+2005-12-06  Ryan Lortie  <desrt@desrt.ca>
+
 	* Locations.xml.in: Add Lugansk (UKCW) and Ternopol (UKLT) from
 	  Ukraine.  Closes bug #168527.
 
